# Real-Estate-Liquidity-PED-Product-Sense

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
config/: settings.py
docs/: DATASET_DOCUMENTATION.md
notebooks/: analysis.py  diagnostics.py
src/liquidity_engine/: __init__.py
src/liquidity_engine/data/: __init__.py  generator.py
src/liquidity_engine/models/: __init__.py  causal_estimator.py
src/liquidity_engine/optimization/: __init__.py  optimizer.py
src/liquidity_engine/visualization/: __init__.py  plots.py
tests/: test_optimizer.py
